# Distributed_training_with_MPI

./: CMakeLists.txt  README.md  results.xlsx
include/: cifar10.h
model/: create_resnet18_scriptmodule.py  model.pt
src/: cifar10.cpp  main.cpp
